add_subdirectory(01_add_vectors)
add_subdirectory(02_for_loops)
add_subdirectory(03_arrays)
add_subdirectory(04_generic_inline_kernel)
add_subdirectory(05_custom_types)
add_subdirectory(06_shared_memory)
add_subdirectory(07_memory_management)
add_subdirectory(08_streams)
add_subdirectory(09_mpi)
add_subdirectory(10_native_cpp_kernels)
# add_subdirectory(11_native_c_kernels)
add_subdirectory(12_native_cuda_kernels)
add_subdirectory(13_native_opencl_kernels)
add_subdirectory(14_openmp_interop)
add_subdirectory(15_cuda_interop)

# Don't force-compile OpenGL examples
# add_subdirectory(16_finite_difference)
# add_subdirectory(17_mandelbulb)

add_subdirectory(20_native_dpcpp_kernel)
add_subdirectory(21_iso3dfd_native_dpcpp)
add_subdirectory(22_iso3dfd_native_dpcpp_optimized)
add_subdirectory(23_iso3dfd_okl)
add_subdirectory(24_iso3dfd_okl_device_function)
add_subdirectory(25_iso3dfd_okl_shared)
# add_subdirectory(26_iso3dfd_okl_shared_natvie)
