add_subdirectory(01_add_vectors)
add_subdirectory(02_for_loops)
add_subdirectory(03_arrays)
add_subdirectory(04_generic_inline_kernel)
add_subdirectory(05_custom_types)
add_subdirectory(06_shared_memory)
add_subdirectory(07_streams)
add_subdirectory(09_native_cpp_kernels)
add_subdirectory(10_native_c_kernels)
add_subdirectory(11_native_cuda_kernels)
add_subdirectory(12_native_opencl_kernels)
add_subdirectory(13_openmp_interop)
add_subdirectory(14_cuda_interop)
add_subdirectory(17_memory_pool)

add_subdirectory(18_nonblocking_streams)
add_subdirectory(19_stream_tags)
add_subdirectory(20_native_dpcpp_kernel)
add_subdirectory(30_device_function)


if (OCCA_CLANG_BASED_TRANSPILER)
  add_subdirectory(31_oklt_v3_moving_avg)
endif()
# Don't force-compile OpenGL examples
# add_subdirectory(16_finite_difference)
# add_subdirectory(17_mandelbulb)
