add_executable(fortran-types types.f90)
target_link_libraries(fortran-types libocca)
target_include_directories(fortran-types PUBLIC "${CMAKE_Fortran_MODULE_DIRECTORY}")
add_test(NAME test-fortran-types COMMAND fortran-types)
set_property(TEST test-fortran-types APPEND PROPERTY ENVIRONMENT OCCA_CACHE_DIR=${OCCA_BUILD_DIR}/occa)

add_library(libtypedefs_helper SHARED typedefs_helper.cpp)
target_link_libraries(libtypedefs_helper libocca)
add_executable(fortran-typedefs typedefs.f90)
target_link_libraries(fortran-typedefs libocca libtypedefs_helper)
target_include_directories(fortran-typedefs PUBLIC "${CMAKE_Fortran_MODULE_DIRECTORY}")
add_test(NAME test-fortran-typedefs COMMAND fortran-typedefs)
set_property(TEST test-fortran-typedefs APPEND PROPERTY ENVIRONMENT OCCA_CACHE_DIR=${OCCA_BUILD_DIR}/occa)
